--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 body{
     font-family: "Roboto", sans-serif;
-    background: linear-gradient(#1A2A66 15%, #192552);
+    background: #192552;
     color: white;
     line-height: 1.6;
 }
